--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt-template-jasmine-istanbul": "^0.5.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "grunt test",
+    "build": "grunt build"
   }
 }
